<resources>
    <string name="app_name">Basic Note</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation -->
    <string name="nav_notes">Notes</string>
    <string name="nav_trash">Trash</string>
    <string name="nav_settings">Settings</string>

    <!-- Toolbar actions -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="tag_close" translatable="false">tag_close</string>
    <string name="tag_mic" translatable="false">tag_mic</string>

    <!-- hints -->
    <string name="hint_search_notes">Search notes&#8230;</string>
    <string name="hint_create_note">Create note</string>
    <string name="hint_password">Password</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_email">Email address</string>

    <!-- transition -->
    <string name="transition_toolbar" translatable="false">transition_toolbar</string>
    <string name="frag_settings" translatable="false">frag_settings</string>
    <string name="frag_trash" translatable="false">frag_trash</string>
    <string name="frag_notes" translatable="false">frag_notes</string>
    <string name="transition_search_toolbar" translatable="false">transition_search_toolbar</string>

    <!-- Content description -->
    <string name="description_start_voice_search">Tap for Voice Search</string>
    <string name="description_drawer_menu">Open side menu</string>

    <!-- Authentication -->
    <string name="sign_with_google">Sign in with Google</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="or"><b>OR</b></string>
    <string name="sign_up_no_account">Don\'t have an account yet? <b>Sign Up.</b></string>
    <string name="sign_in_has_account">Already have an account? <b>Sign In.</b></string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="account_successfully_created">Account successfully created!</string>
    <string name="auth_failed">Could not complete request! Please try again.</string>

    <!-- Validation -->
    <string name="required">Required</string>
    <string name="description_app_image">Basic Note Icon</string>
    <string name="nav_sign_out">Sign out</string>
    <string name="description_search_back">return back</string>
    <string name="hint_search_trash">Search trash&#8230;</string>
    <string name="action_share">Share</string>
    <string name="description_format_bold">Change text format to bold</string>
    <string name="hint_note_body">What\'s new?</string>
    <string name="hint_note_title">Title</string>

    <string name="untitled">Untitled</string>
    <string name="last_edited">Last Edited:</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="empty_note_not_saved">Note not saved because it\'s empty!</string>
    <string name="empty_trash">Empty Trash</string>
    <string name="create_note">Create Note</string>
    <string name="empty_note_list">No notes yet?! Create a new one.</string>
    <string name="no_body_text">No text</string>
    <string name="no_search_results">No search results!</string>
    <string name="voice_search_not_available">Search by voice not available</string>

    <string name="user_account">User Account</string>
    <string name="profile">Profile</string>
    <string name="profile_summary">Edit your profile</string>
    <string name="sign_out">Sign out</string>

    <string name="pref_key_profile_activity" translatable="false">pref_key_profile_activity</string>
    <string name="pref_key_sign_out" translatable="false">pref_key_sign_out</string>
    <string name="pref_key_general_setting" translatable="false">pref_key_general_setting</string>
    <string name="general_setting">General Setting</string>
    <string name="pref_key_sort" translatable="false">pref_key_sort</string>
    <string name="sortby">Sort notes by</string>
    <string name="pref_sort_default" translatable="false">@string/sort_by_last_edited</string>
    <string name="sort_by_last_edited" translatable="false">sort_by_last_edited</string>
    <string name="sort_by_last_edited_label">Last Edited</string>
    <string name="sort_by_title" translatable="false">sort_by_title</string>
    <string name="sort_by_title_label" >Title</string>
    <string name="action_save">Save</string>
    <string name="action_sign_out">Sign out</string>
    <string name="email_error">Not a valid email</string>
    <string name="successfully_saved">Successfully saved!</string>
    <string name="unsuccessfully_saved">Could not save request</string>
    <string name="transition_item_note" translatable="false">item_note</string>
    <string name="transition_profile">transition_profile</string>
    <string name="offline">Internet connection unavailable!</string>


</resources>
