<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_group_main" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_notes"
            android:title="@string/nav_notes" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_menu_trash"
            android:title="@string/nav_trash" />
    </group>



        <group android:id="@+id/nav_group_setting" android:checkableBehavior="single">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_setting"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_sign_out"
                android:title="@string/nav_sign_out" />
        </group>


</menu>
