<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/nav_header_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_header_height"
            android:transitionName="@string/transition_profile">

            <ImageView
                android:id="@+id/profile_background_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:tint="@color/translucent" />

            <android.support.v7.widget.CardView
                android:id="@+id/user_cardview"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:layout_gravity="center"
                app:cardCornerRadius="72dp">

                <ImageView
                    android:id="@+id/user_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/description_app_image"
                    android:scaleType="centerCrop"
                    app:srcCompat="@android:drawable/sym_def_app_icon" />
            </android.support.v7.widget.CardView>

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/normal_padding">

            <TextView
                android:text="@string/hint_first_name"
                android:paddingStart="@dimen/offset_padding"
                android:paddingEnd="@dimen/offset_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/user_firstname_textedittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                android:imeOptions="flagNoFullscreen"
                android:inputType="textCapSentences" />


            <TextView
                android:text="@string/hint_last_name"
                android:paddingStart="@dimen/offset_padding"
                android:paddingEnd="@dimen/offset_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/user_lastname_textedittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name"
                android:imeOptions="flagNoFullscreen"
                android:inputType="textCapSentences" />


            <TextView
                android:text="@string/hint_email"
                android:paddingStart="@dimen/offset_padding"
                android:paddingEnd="@dimen/offset_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/user_email_textedittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:imeOptions="flagNoFullscreen"
                android:inputType="textEmailAddress" />

            <!--<android.support.design.widget.TextInputLayout
                android:id="@+id/user_firstname_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/user_firstname_textedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_first_name"

                    android:imeOptions="flagNoFullscreen"
                    android:inputType="textCapSentences" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/user_lastname_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/user_lastname_textedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_last_name"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="textCapSentences" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/user_email_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/user_email_textedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:imeOptions="flagNoFullscreen"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>-->
        </LinearLayout>
    </LinearLayout>
</ScrollView>